Tweak gradle build before idea reimport